--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class=".hero-image">
                 <div>
-                    <img id="images" href="./images/ONKABETSE SEDUMEDI.jpg">
+                    <img id="images" href="./images/ONKABETSESEDUMEDI.jpg">
                 </div>
                 <div class="hero-text">
                     <h1>Onkabetse Sedumedi</h1>
