had to put submit

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         
     <body>
         <header>
-            <div class=".hero-image">
+            <div class="hero-image">
                 <div>
-                    <img id="images" href="./images/ONKABETSESEDUMEDI.jpg">
+                    <img id="images" src="./images/onkabetsesedumedi.jpg">
                 </div>
                 <div class="hero-text">
                     <h1>Onkabetse Sedumedi</h1>
@@ -100,7 +100,10 @@
         <br>
         <select name="" id="subject">
             <option value="interview opportunity"> Interview opportunity</option>
+            
         </select>
+        <br>
+        <input class="submit" type="submit" value="submit">
     </form>
 </footer>
 
