--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <section class="grid-container">
                 <div class="grid -item">
                     Media
-                    <a href="http://www.facebook.com/">Facebook</a>
-                    ><a href="http://www.linkedln.com/">linkedln</a>
+                    <a href="https://www.facebook.com/onkabetse.sedumedi.39">Facebook </a>
+                    <a href="https://www.linkedin.com/in/onkabetse-sedumedi-70a5721bb/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8aBD1%2BiKTY2YQ1S4%2B6NmnQ%3D%3D">linkedln</a>
                 </div>
             </section>
 
