--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html>
     <HEAD>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="device-width, initial-scale=1.0">
         <title>Onkabetse Sedumedi Resume</title>
-        <link ref="stylesheet" href="./css/stylesheet.css">
+        <link ref="stylesheet"type="text/CSS"href="/css/stylesheet.css">
 
     </HEAD>
         
@@ -13,7 +14,7 @@
         <header>
             <div class="hero-image">
                 <div>
-                    <img id="images" src="./images/onkabetsesedumedi.jpg">
+                    <img id="images"src="./images/onkabetsesedumedi.jpg">
                 </div>
                 <div class="hero-text">
                     <h1>Onkabetse Sedumedi</h1>
@@ -27,7 +28,7 @@
 
         <main id="structure">
 
-            <section id="My Content" class="section">
+            <section id="My Content"class="section">
                 <h2>Onkabetse Sedumedi</h2>
 
                 <article class="Education">
@@ -61,7 +62,7 @@
                 </article>
             </section>
 
-            <section id="Contect Details" class="section">
+            <section id="Contect Details"class="section">
                 <h2>Contects</h2>
 
                 <div id="contect-structure">
@@ -77,7 +78,7 @@
             </section>
 
             <section class="grid-container">
-                <div class="grid -item">
+                <div class="grid-item">
                     Media
                     <a href="https://www.facebook.com/onkabetse.sedumedi.39">Facebook </a>
                     <a href="https://www.linkedin.com/in/onkabetse-sedumedi-70a5721bb/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8aBD1%2BiKTY2YQ1S4%2B6NmnQ%3D%3D">linkedln</a>
@@ -88,22 +89,22 @@
         </main>
 <footer id="footer">
     <nav id="footer links">
-        <a class="nav links" href="#My content">My content</a>
-        <a class="nav link" href="#contect details">contect details</a>
-        <a class="nav link" href="#grid item">Media</a>
+        <a class="nav links"href="#My content">My content</a>
+        <a class="nav link"href="#contect details">contect details</a>
+        <a class="nav link"href="#grid-item">Media</a>
     </nav>
 
     <h2>Contact Me</h2>
     <form action="https://formsubmit.co/your@email.com/olsedumedi12gmail.com" method="post">
-        <input type="email" name="email"id="email here please">
+        <input type="email"name="email"id="email here please">
 
         <br>
-        <select name="" id="subject">
+        <select name=""id="subject">
             <option value="interview opportunity"> Interview opportunity</option>
             
         </select>
         <br>
-        <input class="submit" type="submit" value="submit">
+        <input class="submit"type="submit"value="submit">
     </form>
 </footer>
 
