--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         
     <body>
         <header>
-            <div class="hero-image">
+            <div class="heroImage">
                 <div>
                     <img id="images"src="./images/onkabetsesedumedi.jpg">
                 </div>
-                <div class="hero-text">
+                <div class="heroText">
                     <h1>Onkabetse Sedumedi</h1>
                     <p>I am a hard working, motivated, bubbly person. I am good with computers.I can deal with working under pressure. I can also work with teams.
                         I am known for being a detail-oriented, well-organized team player. I never miss deadlines, I am a good communicator and I can juggle multiple tasks at once. In my performance reviews, my supervisor always notes that he appreciates my professionalism and enthusiasm for the job.
@@ -28,7 +28,7 @@
 
         <main id="structure">
 
-            <section id="My Content"class="section">
+            <section id="MyContent"class="section">
                 <h2>Onkabetse Sedumedi</h2>
 
                 <article class="Education">
@@ -41,7 +41,7 @@
 
                 </article>
 
-                <article class="My Content">
+                <article class="MyContent">
                     <h3>Work Experience</h3>
 
                     <ul>
@@ -51,7 +51,7 @@
                     </ul>
                 </article>
 
-                <article class="My Content">
+                <article class="MyContent">
                     <h3>Skills</h3>
                     <ul>
                         <li>Computer Literacy</li>
@@ -62,10 +62,10 @@
                 </article>
             </section>
 
-            <section id="Contect Details"class="section">
+            <section id="ContectDetails"class="section">
                 <h2>Contects</h2>
 
-                <div id="contect-structure">
+                <div id="contectStructure">
                     <div>
                         <h3> Cell Number-067 851 9666</h3>
                     </div>
@@ -77,8 +77,8 @@
 
             </section>
 
-            <section class="grid-container">
-                <div class="grid-item">
+            <section class="gridContainer">
+                <div class="gridItem">
                     Media
                     <a href="https://www.facebook.com/onkabetse.sedumedi.39">Facebook </a>
                     <a href="https://www.linkedin.com/in/onkabetse-sedumedi-70a5721bb/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B8aBD1%2BiKTY2YQ1S4%2B6NmnQ%3D%3D">linkedln</a>
@@ -89,13 +89,13 @@
         </main>
 <footer id="footer">
     <nav id="footer links">
-        <a class="nav links"href="#My content">My content</a>
-        <a class="nav link"href="#contect details">contect details</a>
-        <a class="nav link"href="#grid-item">Media</a>
+        <a class="navlinks"href="#MyContent">My content</a>
+        <a class="navlink"href="#contectDetails">contect details</a>
+        <a class="navlink"href="#gridItem">Media</a>
     </nav>
 
     <h2>Contact Me</h2>
-    <form action="https://formsubmit.co/your@email.com/olsedumedi12gmail.com" method="post">
+    <form action="https://formsubmit.co/your@email.com/olsedumedi12gmail.com"method="post">
         <input type="email"name="email"id="email here please">
 
         <br>
